# pieceRepo

./: .gitignore  AbstractPuzzleKdPiece.cpp  AbstractPuzzleKdPiece.h  CMakeLists.txt  Constrain.cpp  Constrain.h  Puzzle2dPiece.cpp  Puzzle2dPiece.h  Puzzle3dPiece.cpp  Puzzle3dPiece.h  PuzzlePiece.cpp  PuzzlePiece.h  ex4headers.h  groupPuzzlePieces.cpp  groupPuzzlePieces.h  groupPuzzlePiecesWithRotate.cpp  groupPuzzlePiecesWithRotate.h  main.cpp  makefile  students.txt  tester.py
